Add lombok